deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-microproject-deployment
spec:
  selector:
    matchLabels:
      app: k8s-microproject
  template:
    metadata:
      labels:
        app: k8s-microproject
    spec:
      containers:
      - name: my-pod
        image: loricaudin/k8s-microproject
        livenessProbe:
          httpGet:
            path: /
            port: 3000
  replicas: 3
