http-liveness.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    test: k8s-microproject-liveness
  name: k8s-microproject-liveness-http
spec:
  containers:
  - name: my-pod
    image: camillemorfin/k8s-microproject
    args:
    - k8s-microproject-liveness
    livenessProbe:
      httpGet:
        path: /
        port: 80
        httpHeaders:
        - name: Custom-Header
          value: Awesome
      initialDelaySeconds: 3
      periodSeconds: 3
